# scripts

./: .gitignore  README.md
aoc/: Cargo.toml  main.rs
bowling/: Cargo.toml  ans.txt  main.rs
leet/: Cargo.toml  main.rs
ninja/: Cargo.toml  main.rs
rng/: Cargo.toml  main.rs
spades/: global.lua  rules.txt  scorecard.lua  turn_token.lua
tekken/: Cargo.toml  log.txt  main.rs  query.txt
